Fix overflow and change animation speed

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 html,
 body {
 	max-width: 100vw;
-	min-height: 100svh;
+	min-height: 100vh;
+	min-height: 100dvh;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 }
@@ -118,6 +119,7 @@ img {
 
 /* **STAGE */
 .stage {
+	z-index: -9;
 	margin-bottom: 2.5rem;
 	opacity: 0;
 	position: relative;
@@ -146,6 +148,7 @@ img {
 
 .result {
 	align-items: center;
+
 	color: #80ff72;
 	display: flex;
 	flex-direction: column;
@@ -177,7 +180,22 @@ img {
 /* ||EFFECTS */
 
 .choices-bigSmall {
+	-webkit-animation: bigSmall ease 500ms;
 	animation: bigSmall ease 500ms;
+}
+
+@-webkit-keyframes bigSmall {
+	0% {
+		scale: 1;
+	}
+
+	50% {
+		scale: 2;
+	}
+
+	100% {
+		scale: 1;
+	}
 }
 
 @keyframes bigSmall {
@@ -209,12 +227,14 @@ img {
 		transform: translateY(0);
 	}
 
-	50% {
-		transform: translateY(-25px);
+	20% {
+		opacity: 0;
+		transform: translateY(-1.56rem);
 	}
 
 	100% {
-		transform: translateY(200px);
+		opacity: 0;
+		transform: translateY(6.25rem);
 	}
 }
 
@@ -223,14 +243,14 @@ img {
 		transform: translateY(0);
 	}
 
-	50% {
+	20% {
 		opacity: 0;
-		transform: translateY(-25px);
+		transform: translateY(-1.56rem);
 	}
 
 	100% {
 		opacity: 0;
-		transform: translateY(200px);
+		transform: translateY(6.25rem);
 	}
 }
 
@@ -242,15 +262,14 @@ img {
 @-webkit-keyframes goDownUp {
 	0% {
 		opacity: 0;
-		transform: translateY(200px);
+		transform: translateY(6.25rem);
 	}
 
-	50% {
+	65% {
 		opacity: 0;
 	}
 
 	100% {
-		opacity: 1;
 		transform: translateY(0);
 	}
 }
@@ -258,15 +277,14 @@ img {
 @keyframes goDownUp {
 	0% {
 		opacity: 0;
-		transform: translateY(200px);
+		transform: translateY(6.25rem);
 	}
 
-	50% {
+	65% {
 		opacity: 0;
 	}
 
 	100% {
-		opacity: 1;
 		transform: translateY(0);
 	}
 }
@@ -326,6 +344,6 @@ img {
 
 @media (pointer: coarse) and (orientation: landscape) {
 	.wrapper {
-		margin: 1rem 0;
+		margin: 2rem 0;
 	}
 }
